--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.dll
 *.so
 *.dylib
+.env
 
 # Test binary, built with `go test -c`
 *.test
@@ -12,3 +13,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+sample/
